@@ -1,5 +1,13 @@
 2011-04-13 Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/graphs/functions_pchart.php: added lost lines of source code to
+	set bottom margin.
+	
+	* godmode/reporting/visual_console_builder.editor.js: changed to use new
+	progress bar.
+
+2011-04-13 Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/functions_graph.php, include/graphs/functions_gd.php,
 	include/graphs/fgraph.php, include/functions_visual_map.php,
 	include/fgraph.php, operation/agentes/estado_generalagente.php,
